force-app/main/default/objects/Order/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <label>Credit Status</label>
    <type>Picklist</type>
    <description>Credit-approval dimension of the order lifecycle. Owned by the credit team. See ADR-0004.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Not_Required</fullName><default>true</default><label>Not Required</label></value>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>