force-app/main/default/objects/Order/fields/Fulfillment_Status__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Status__c</fullName>
    <label>Fulfillment Status</label>
    <type>Picklist</type>
    <description>Fulfillment dimension of the order lifecycle. Owned by operations. See ADR-0004.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Not_Started</fullName><default>true</default><label>Not Started</label></value>
            <value><fullName>In_Picking</fullName><default>false</default><label>In Picking</label></value>
            <value><fullName>Shipped</fullName><default>false</default><label>Shipped</label></value>
            <value><fullName>Delivered</fullName><default>false</default><label>Delivered</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>