force-app/main/default/objects/Order/fields/Order_Stage__c.field-meta.xml
<CustomField>
    <fullName>Order_Stage__c</fullName>
    <label>Order Stage</label>
    <type>Text</type>
    <formula>IF(ISPICKVAL(Credit_Status__c, "Rejected"), "Credit Rejected",
IF(ISPICKVAL(Fulfillment_Status__c, "Cancelled"), "Cancelled",
IF(AND(ISPICKVAL(Fulfillment_Status__c, "Delivered"), ISPICKVAL(Payment_Status__c, "Paid")), "Completed",
IF(ISPICKVAL(Fulfillment_Status__c, "Delivered"), "Delivered - Awaiting Payment",
IF(ISPICKVAL(Fulfillment_Status__c, "Shipped"), "Shipped",
IF(ISPICKVAL(Fulfillment_Status__c, "In_Picking"), "In Picking",
IF(ISPICKVAL(Credit_Status__c, "Pending"), "Pending Credit Approval",
"New")))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>User-friendly single stage derived from the three orthogonal status fields. See ADR-0004.</description>
</CustomField>