force-app/main/default/objects/Order/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <description>Order subtype. Picklist instead of Record Types (subtypes are homogeneous). See ADR-0004 / decisions-log Order header.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Standard</fullName><default>true</default><label>Standard</label></value>
            <value><fullName>Sample</fullName><default>false</default><label>Sample</label></value>
            <value><fullName>Return</fullName><default>false</default><label>Return</label></value>
            <value><fullName>Internal</fullName><default>false</default><label>Internal</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>