force-app/main/default/objects/Order/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <description>Payment dimension of the order lifecycle. Owned by finance. See ADR-0004.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Not_Paid</fullName><default>true</default><label>Not Paid</label></value>
            <value><fullName>Partially_Paid</fullName><default>false</default><label>Partially Paid</label></value>
            <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>